...
  <string name="bottom_sheet_options_menu_close">Close</string>
  <string name="menu_switch_profile">Switch Profile</string>
  <string name="developer_options">Developer Options</string>
  <string name="administrator_controls">Administrator Controls</string>
  <string name="drawer_open_content_description">Navigation Menu Open</string>
  <string name="drawer_close_content_description">Navigation Menu Close</string>
  <string name="audio_play_description">Play audio</string>
  <string name="audio_pause_description">Pause audio</string>
  <string name="audio_unavailable_in_selected_language">%s audio is unavailable.</string>
  <string name="audio_language_select_dialog_okay_button" tools:ignore="ButtonCase,Typos">Ok</string>
  <string name="audio_language_select_dialog_cancel_button">Cancel</string>
  <string name="audio_language_select_dialog_title">Audio Language</string>
  <string name="audio_dialog_offline_title">Currently Offline</string>
  <string name="audio_dialog_offline_message">Make sure Wi-Fi or cellular data is turned on, then try again.</string>
  <string name="audio_dialog_offline_positive" tools:ignore="ButtonCase,Typos">Ok</string>
  <string name="cellular_data_alert_dialog_okay_button" tools:ignore="ButtonCase,Typos">Ok</string>
  <string name="cellular_data_alert_dialog_cancel_button">Cancel</string>
  <string name="cellular_data_alert_dialog_title">Currently on Cellular Data</string>
  <string name="cellular_data_alert_dialog_description">Streaming audio may use a lot of cellular data.</string>
  <string name="cellular_data_alert_dialog_checkbox">Don\'t show this message again</string>
  <string name="concept_card_toolbar_title">Concept Card</string>
  <string name="concept_card_one_button_text">Concept Card 1</string>
  <string name="concept_card_two_button_text">Concept Card 2</string>
  <string name="revision_card_toolbar_title">Study Guide</string>
  <string name="worked_example_question_label">Question:</string>
...
  <string name="coming_soon">Coming Soon</string>
  <string name="recommended_stories">Recommended Stories</string>
  <string name="stories_for_you">Stories For You</string>
  <string name="question_player_activity_title">Practice Mode</string>
  <string name="revision_card_activity_title">Skill revision page</string>
  <string name="study_guide_activity_title">Study guide page</string>
  <string name="audio_player_seekbar_content_description">Audio progress</string>
  <string name="audio_language_icon_content_description">Change language</string>
  <string name="audio_player_on">Audio, ON</string>
  <string name="audio_player_off">Audio, OFF</string>
  <string name="correct_submitted_answer">Correct submitted answer</string>
  <string name="correct_submitted_answer_with_append">Correct submitted answer: %s</string>
  <string name="incorrect_submitted_answer">Incorrect submitted answer</string>
  <string name="incorrect_submitted_answer_with_append">Incorrect submitted answer: %s</string>
...
