...
        android:indeterminate="true"
        android:visibility="@{viewModel.playStatusLiveData == UiAudioPlayStatus.LOADING ? View.VISIBLE : View.GONE}"
        app:indicatorColor="@color/component_color_audio_fragment_voiceover_progressbar_color"
        app:indicatorSize="@dimen/audio_fragment_progress_indicator_size"
        app:trackThickness="@dimen/audio_fragment_progress_indicator_track_thickness"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/play_pause_audio_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

      <ImageView
        android:id="@+id/play_pause_audio_icon"
        android:layout_width="52dp"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@{viewModel.playStatusLiveData.equals(UiAudioPlayStatus.PLAYING) ? @drawable/ic_pause_circle_filled_white_24dp : @drawable/ic_play_circle_filled_white_24dp}"
        app:tint="@color/component_color_shared_icon_white_color" />

      <SeekBar
        android:id="@+id/audio_progress_seek_bar"
        style="@style/AudioSeekBar"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:layout_marginStart="4dp"
        android:contentDescription="@string/audio_player_seekbar_content_description"
        android:max="@{viewModel.durationLiveData}"
...
        android:progress="@{audioFragment.userIsSeeking ? audioFragment.userPosition : viewModel.positionLiveData}"
        android:progressDrawable="@drawable/audio_seekbar_background"
        android:splitTrack="false"
        android:thumb="@drawable/seekbar_thumb"
        android:thumbOffset="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/audio_language_icon"
        app:layout_constraintStart_toEndOf="@+id/play_pause_audio_icon"
        app:layout_constraintTop_toTopOf="parent" />

      <ImageView
        android:id="@+id/audio_language_icon"
        android:layout_width="48dp"
...
