<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/audio_fragment_placeholder"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".app.testing.AudioFragmentTestActivity" />
