package org.oppia.android.app.player.audio

import android.app.Application
import android.content.Context
import android.content.Intent
import android.media.MediaPlayer
import android.net.Uri
import android.view.View
import android.widget.SeekBar
import androidx.appcompat.app.AppCompatActivity
import androidx.test.core.app.ActivityScenario.launch
import androidx.test.core.app.ApplicationProvider
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.PerformException
import androidx.test.espresso.UiController
import androidx.test.espresso.ViewAction
import androidx.test.espresso.ViewInteraction
import androidx.test.espresso.action.ViewActions.click
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.matcher.RootMatchers.isDialog
import androidx.test.espresso.matcher.ViewMatchers
import androidx.test.espresso.matcher.ViewMatchers.isDisplayed
import androidx.test.espresso.matcher.ViewMatchers.isRoot
import androidx.test.espresso.matcher.ViewMatchers.withContentDescription
import androidx.test.espresso.matcher.ViewMatchers.withEffectiveVisibility
import androidx.test.espresso.matcher.ViewMatchers.withId
import androidx.test.espresso.matcher.ViewMatchers.withText
import androidx.test.espresso.util.HumanReadables
import androidx.test.espresso.util.TreeIterables
import androidx.test.ext.junit.runners.AndroidJUnit4
import com.google.common.truth.Truth.assertThat
import dagger.Component
import org.hamcrest.CoreMatchers.allOf
import org.hamcrest.CoreMatchers.containsString
import org.hamcrest.CoreMatchers.not
import org.hamcrest.Description
import org.hamcrest.Matcher
import org.hamcrest.TypeSafeMatcher
import org.junit.After
import org.junit.Before
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith
import org.oppia.android.app.activity.ActivityComponent
import org.oppia.android.app.activity.ActivityComponentFactory
import org.oppia.android.app.activity.route.ActivityRouterModule
import org.oppia.android.app.application.ApplicationComponent
import org.oppia.android.app.application.ApplicationInjector
import org.oppia.android.app.application.ApplicationInjectorProvider
import org.oppia.android.app.application.ApplicationModule
import org.oppia.android.app.application.ApplicationStartupListenerModule
import org.oppia.android.app.application.testing.TestingBuildFlavorModule
import org.oppia.android.app.devoptions.DeveloperOptionsModule
import org.oppia.android.app.devoptions.DeveloperOptionsStarterModule
import org.oppia.android.app.model.AudioLanguage
import org.oppia.android.app.model.LegacyProfileId
import org.oppia.android.app.model.State
import org.oppia.android.app.model.SubtitledHtml
import org.oppia.android.app.model.Voiceover
import org.oppia.android.app.model.VoiceoverMapping
import org.oppia.android.app.player.state.itemviewmodel.SplitScreenInteractionModule
import org.oppia.android.app.shim.ViewBindingShimModule
import org.oppia.android.app.test.R
import org.oppia.android.app.testing.AudioFragmentTestActivity
import org.oppia.android.app.translation.testing.ActivityRecreatorTestModule
import org.oppia.android.app.utility.OrientationChangeAction.Companion.orientationLandscape
import org.oppia.android.data.backends.gae.NetworkConfigProdModule
import org.oppia.android.data.backends.gae.RetrofitModule
import org.oppia.android.data.backends.gae.RetrofitServiceModule
import org.oppia.android.domain.audio.AudioPlayerController
import org.oppia.android.domain.classify.InteractionsModule
import org.oppia.android.domain.classify.rules.algebraicexpressioninput.AlgebraicExpressionInputModule
import org.oppia.android.domain.classify.rules.continueinteraction.ContinueModule
import org.oppia.android.domain.classify.rules.dragAndDropSortInput.DragDropSortInputModule
import org.oppia.android.domain.classify.rules.fractioninput.FractionInputModule
import org.oppia.android.domain.classify.rules.imageClickInput.ImageClickInputModule
import org.oppia.android.domain.classify.rules.itemselectioninput.ItemSelectionInputModule
import org.oppia.android.domain.classify.rules.mathequationinput.MathEquationInputModule
import org.oppia.android.domain.classify.rules.multiplechoiceinput.MultipleChoiceInputModule
import org.oppia.android.domain.classify.rules.numberwithunits.NumberWithUnitsRuleModule
import org.oppia.android.domain.classify.rules.numericexpressioninput.NumericExpressionInputModule
import org.oppia.android.domain.classify.rules.numericinput.NumericInputRuleModule
import org.oppia.android.domain.classify.rules.ratioinput.RatioInputModule
import org.oppia.android.domain.classify.rules.textinput.TextInputRuleModule
import org.oppia.android.domain.exploration.ExplorationProgressModule
import org.oppia.android.domain.exploration.ExplorationStorageModule
import org.oppia.android.domain.hintsandsolution.HintsAndSolutionConfigModule
import org.oppia.android.domain.hintsandsolution.HintsAndSolutionProdModule
import org.oppia.android.domain.onboarding.ExpirationMetaDataRetrieverModule
import org.oppia.android.domain.oppialogger.LogStorageModule
import org.oppia.android.domain.oppialogger.LoggingIdentifierModule
import org.oppia.android.domain.oppialogger.analytics.ApplicationLifecycleModule
import org.oppia.android.domain.oppialogger.analytics.CpuPerformanceSnapshotterModule
import org.oppia.android.domain.oppialogger.logscheduler.MetricLogSchedulerModule
import org.oppia.android.domain.oppialogger.loguploader.LogReportWorkerModule
import org.oppia.android.domain.platformparameter.PlatformParameterSingletonModule
import org.oppia.android.domain.profile.ProfileManagementController
import org.oppia.android.domain.question.QuestionModule
import org.oppia.android.domain.workmanager.WorkManagerConfigurationModule
import org.oppia.android.testing.OppiaTestRule
import org.oppia.android.testing.RunOn
import org.oppia.android.testing.TestLogReportingModule
import org.oppia.android.testing.TestPlatform
import org.oppia.android.testing.data.DataProviderTestMonitor
import org.oppia.android.testing.firebase.TestAuthenticationModule
import org.oppia.android.testing.junit.InitializeDefaultLocaleRule
import org.oppia.android.testing.platformparameter.TestPlatformParameterModule
import org.oppia.android.testing.profile.ProfileTestHelper
import org.oppia.android.testing.robolectric.IsOnRobolectric
import org.oppia.android.testing.robolectric.RobolectricModule
import org.oppia.android.testing.threading.TestCoroutineDispatchers
import org.oppia.android.testing.threading.TestDispatcherModule
import org.oppia.android.testing.time.FakeOppiaClockModule
import org.oppia.android.util.accessibility.AccessibilityTestModule
import org.oppia.android.util.caching.AssetModule
import org.oppia.android.util.gcsresource.GcsResourceModule
import org.oppia.android.util.locale.LocaleProdModule
import org.oppia.android.util.logging.LoggerModule
import org.oppia.android.util.logging.SyncStatusModule
import org.oppia.android.util.networking.NetworkConnectionDebugUtil
import org.oppia.android.util.networking.NetworkConnectionDebugUtilModule
import org.oppia.android.util.networking.NetworkConnectionUtil.ProdConnectionStatus
import org.oppia.android.util.networking.NetworkConnectionUtilDebugModule
import org.oppia.android.util.parser.html.HtmlParserEntityTypeModule
import org.oppia.android.util.parser.image.GlideImageLoaderModule
import org.oppia.android.util.parser.image.ImageParsingModule
import org.oppia.android.util.profile.CurrentUserProfileIdIntentDecorator.extractCurrentUserProfileId
import org.oppia.android.util.profile.toProfileIdPreservingZero
import org.robolectric.annotation.Config
import org.robolectric.annotation.LooperMode
import java.io.IOException
import java.util.concurrent.TimeoutException
import javax.inject.Inject
import javax.inject.Singleton

/**
 * TODO(#59): Make this test work with Espresso.
 * NOTE TO DEVELOPERS: This test will not build for Espresso,
 * and may prevent other tests from being built or running.
 * Tests for [AudioFragment].
 */
@RunWith(AndroidJUnit4::class)
@LooperMode(LooperMode.Mode.PAUSED)
@Config(
  application = AudioFragmentTest.TestApplication::class, qualifiers = "port-xxhdpi"
)
class AudioFragmentTest {
  @get:Rule
  val initializeDefaultLocaleRule = InitializeDefaultLocaleRule()

  @get:Rule
  val oppiaTestRule = OppiaTestRule()

  @Inject
  lateinit var context: Context

  @Inject
  lateinit var testCoroutineDispatchers: TestCoroutineDispatchers

  @Inject
  lateinit var profileTestHelper: ProfileTestHelper

  @Inject
  lateinit var profileManagementController: ProfileManagementController

  @Inject
  lateinit var audioPlayerController: AudioPlayerController

  @Inject
  lateinit var networkConnectionUtil: NetworkConnectionDebugUtil

  @Inject
  lateinit var monitorFactory: DataProviderTestMonitor.Factory

  private lateinit var shadowMediaPlayer: Any

  private val TEST_URL =
    "https://storage.googleapis.com/oppiaserver-resources/exploration/" +
      "2mzzFVDLuAj8/assets/audio/content-en-057j51i2es.mp3"
  private val TEST_URL2 =
    "https://storage.googleapis.com/oppiaserver-resources/exploration/" +
      "2mzzFVDLuAj8/assets/audio/content-hi-2hn6btuei5.mp3"

  private var internalProfileId = 0
  private var profileId = LegacyProfileId.newBuilder().setInternalId(internalProfileId).build()

  @Before
  fun setUp() {
    setUpTestApplicationComponent()
    testCoroutineDispatchers.registerIdlingResource()
  }

  @After
  fun tearDown() {
    testCoroutineDispatchers.unregisterIdlingResource()
  }

  private fun createAudioFragmentTestIntent(profileId: Int): Intent {
    return AudioFragmentTestActivity.createAudioFragmentTestActivity(
      context, profileId
    )
  }

  private fun updateProfileAudioLanguage(audioLanguage: AudioLanguage) {
    profileTestHelper.initializeProfiles()
    val updateProvider = profileManagementController.updateAudioLanguage(
      profileId.toProfileIdPreservingZero(),
      audioLanguage
    )
    monitorFactory.ensureDataProviderExecutes(updateProvider)
  }

  @Test
  fun testAudioFragment_seekbar_hasContentDescription() {
    addMediaInfo()
    launch<AudioFragmentTestActivity>(
      createAudioFragmentTestIntent(
        internalProfileId
      )
    ).use {
      testCoroutineDispatchers.runCurrent()
      onView(withId(R.id.audio_progress_seek_bar)).check(
        matches(
          withContentDescription(
            context.getString(R.string.audio_player_seekbar_content_description)
          )
        )
      )
    }
  }

  @Test
  fun testAudioFragment_languageIcon_hasContentDescription() {
    addMediaInfo()
    launch<AudioFragmentTestActivity>(
      createAudioFragmentTestIntent(
        internalProfileId
      )
    ).use {
      testCoroutineDispatchers.runCurrent()
      onView(withId(R.id.audio_language_icon)).check(
        matches(
          withContentDescription(
            context.getString(R.string.audio_language_icon_content_description)
          )
        )
      )
    }
  }

  @Test
  fun testAudioFragment_playAudio_configurationChange_checkAudioPaused() {
    addMediaInfo()
    launch<AudioFragmentTestActivity>(
      createAudioFragmentTestIntent(
        internalProfileId
      )
    ).use {
      testCoroutineDispatchers.runCurrent()

      waitForTheView(
        allOf(
          withId(R.id.play_pause_audio_icon),
          WithNonZeroDimensionsMatcher()
        )
      ).perform(click())
      testCoroutineDispatchers.runCurrent()

      onView(withId(R.id.audio_progress_seek_bar)).perform(setProgress(100))

      onView(isRoot()).perform(orientationLandscape())
      testCoroutineDispatchers.runCurrent()
      onView(withId(R.id.play_pause_audio_icon)).check(
        matches(
          withContentDescription(
            context.getString(
              R.string.audio_play_description
            )
          )
        )
      )
    }
  }

  @Test
  fun testAudioFragment_openFragment_showsFragment() {
    addMediaInfo()
    launch<AudioFragmentTestActivity>(
      createAudioFragmentTestIntent(
        internalProfileId
      )
    ).use {
      testCoroutineDispatchers.runCurrent()
      onView(withId(R.id.play_pause_audio_icon)).check(matches(isDisplayed()))
      onView(withId(R.id.play_pause_audio_icon)).check(
        matches(
          withContentDescription(
            context.getString(
              R.string.audio_play_description
            )
          )
        )
      )
    }
  }

  // TODO(#2417): Need a fake audio library to run this test on espresso
  @RunOn(TestPlatform.ROBOLECTRIC)
  @Test
  fun testAudioFragment_invokePrepared_clickPlayButton_showsPauseButton() {
    addMediaInfo()
    networkConnectionUtil.setCurrentConnectionStatus(ProdConnectionStatus.LOCAL)
    launch<AudioFragmentTestActivity>(
      createAudioFragmentTestIntent(
        internalProfileId
      )
    ).use {
      testCoroutineDispatchers.runCurrent()

      onView(withId(R.id.play_pause_audio_icon)).perform(click())

      testCoroutineDispatchers.runCurrent()
      onView(withId(R.id.play_pause_audio_icon)).check(
        matches(
          withContentDescription(
            context.getString(
              R.string.audio_pause_description
            )
          )
        )
      )
    }
  }

  @Test
  fun testAudioFragment_invokePrepared_touchSeekBar_checkStillPaused() {
    addMediaInfo()
    launch<AudioFragmentTestActivity>(
      createAudioFragmentTestIntent(
        internalProfileId
      )
    ).use {
      testCoroutineDispatchers.runCurrent()

      onView(withId(R.id.audio_progress_seek_bar)).perform(setProgress(100))

      testCoroutineDispatchers.runCurrent()
      onView(withId(R.id.play_pause_audio_icon)).check(
        matches(
          withContentDescription(
            context.getString(
              R.string.audio_play_description
            )
          )
        )
      )
    }
  }

  // TODO(#2417): Need a fake audio library to run this test on espresso
  @RunOn(TestPlatform.ROBOLECTRIC)
  @Test
  fun testAudioFragment_invokePrepared_clickPlay_touchSeekBar_checkStillPlaying() {
    addMediaInfo()
    networkConnectionUtil.setCurrentConnectionStatus(ProdConnectionStatus.LOCAL)
    launch<AudioFragmentTestActivity>(
      createAudioFragmentTestIntent(
        internalProfileId
      )
    ).use {
      testCoroutineDispatchers.runCurrent()

      onView(withId(R.id.play_pause_audio_icon)).perform(click())
      testCoroutineDispatchers.runCurrent()
      onView(withId(R.id.audio_progress_seek_bar)).perform(setProgress(100))

      testCoroutineDispatchers.runCurrent()
      onView(withId(R.id.play_pause_audio_icon)).check(
        matches(
          withContentDescription(
            context.getString(
              R.string.audio_pause_description
            )
          )
        )
      )
    }
  }

  @Test
  fun testAudioFragment_invokePrepared_playAudio_configurationChange_checkStillPlaying() {
    addMediaInfo()
    networkConnectionUtil.setCurrentConnectionStatus(ProdConnectionStatus.LOCAL)
    launch<AudioFragmentTestActivity>(
      createAudioFragmentTestIntent(
        internalProfileId
      )
    ).use {
      testCoroutineDispatchers.runCurrent()

      onView(withId(R.id.play_pause_audio_icon)).perform(click())
      testCoroutineDispatchers.runCurrent()
      onView(withId(R.id.audio_progress_seek_bar)).perform(setProgress(100))
      testCoroutineDispatchers.runCurrent()
      onView(isRoot()).perform(orientationLandscape())
      testCoroutineDispatchers.runCurrent()
      onView(withId(R.id.play_pause_audio_icon)).check(
        matches(
          withContentDescription(
            context.getString(
              R.string.audio_pause_description
            )
          )
        )
      )
    }
  }

  @Test
  fun testAudioFragment_invokePrepared_changeDifferentLanguage_checkResetSeekBarAndPaused() {
    addMediaInfo()
    networkConnectionUtil.setCurrentConnectionStatus(ProdConnectionStatus.LOCAL)
    launch<AudioFragmentTestActivity>(
      createAudioFragmentTestIntent(
        internalProfileId
      )
    ).use {
      testCoroutineDispatchers.runCurrent()

      onView(withId(R.id.play_pause_audio_icon)).perform(click())
      testCoroutineDispatchers.runCurrent()
      onView(withId(R.id.audio_progress_seek_bar)).perform(setProgress(100))

      testCoroutineDispatchers.runCurrent()
      onView(withId(R.id.audio_language_icon)).perform(click())

      testCoroutineDispatchers.runCurrent()
      onView(withText(R.string.hinglish_localized_language_name)).inRoot(isDialog())
        .perform(click())

      testCoroutineDispatchers.runCurrent()
      onView(withText("Ok")).inRoot(isDialog()).perform(click())

      testCoroutineDispatchers.runCurrent()
      onView(withId(R.id.play_pause_audio_icon)).check(
        matches(
          withContentDescription(
            context.getString(
              R.string.audio_play_description
            )
          )
        )
      )
      onView(withId(R.id.audio_progress_seek_bar)).check(matches(withSeekBarPosition(0)))
    }
  }

  @Test
  fun testFragment_fragmentLoaded_verifyCorrectArgumentsPassed() {
    addMediaInfo()
    launch<AudioFragmentTestActivity>(
      createAudioFragmentTestIntent(internalProfileId)
    ).use { scenario ->
      testCoroutineDispatchers.runCurrent()
      scenario.onActivity { activity ->

        val audioFragment = activity.supportFragmentManager
          .findFragmentById(R.id.audio_fragment_placeholder) as AudioFragment
        val receivedProfileId = audioFragment.arguments?.extractCurrentUserProfileId()

        assertThat(receivedProfileId).isEqualTo(profileId)
      }
    }
  }

  @RunOn(TestPlatform.ROBOLECTRIC)
  @Test
  fun testAudioFragment_clickPlayPauseWhenPlaying_pausesAudioWithoutNetworkCheck() {
    addMediaInfo()
    networkConnectionUtil.setCurrentConnectionStatus(ProdConnectionStatus.LOCAL)
    launch<AudioFragmentTestActivity>(
      createAudioFragmentTestIntent(internalProfileId)
    ).use {
      testCoroutineDispatchers.runCurrent()

      onView(withId(R.id.play_pause_audio_icon)).perform(click())
      testCoroutineDispatchers.runCurrent()

      onView(withId(R.id.play_pause_audio_icon)).check(
        matches(
          withContentDescription(
            context.getString(R.string.audio_pause_description)
          )
        )
      )

      networkConnectionUtil.setCurrentConnectionStatus(ProdConnectionStatus.NONE)
      testCoroutineDispatchers.runCurrent()

      onView(withId(R.id.play_pause_audio_icon)).perform(click())
      testCoroutineDispatchers.runCurrent()

      onView(withId(R.id.play_pause_audio_icon)).check(
        matches(
          withContentDescription(
            context.getString(R.string.audio_play_description)
          )
        )
      )
    }
  }

  @Test
  fun testAudioFragment_clickPlayPauseWhenPausedWithNoNetwork_showsOfflineDialog() {
    addMediaInfo()
    networkConnectionUtil.setCurrentConnectionStatus(ProdConnectionStatus.NONE)
    launch<AudioFragmentTestActivity>(
      createAudioFragmentTestIntent(internalProfileId)
    ).use {
      testCoroutineDispatchers.runCurrent()

      onView(withId(R.id.play_pause_audio_icon)).check(
        matches(
          withContentDescription(
            context.getString(R.string.audio_play_description)
          )
        )
      )

      onView(withId(R.id.play_pause_audio_icon)).perform(click())
      testCoroutineDispatchers.runCurrent()

      onView(withText(context.getString(R.string.audio_dialog_offline_message)))
        .inRoot(isDialog())
        .check(matches(isDisplayed()))
    }
  }

  @Test
  fun testAudioFragment_clickPlayPauseWhenPausedWithCellularNoDataPermission_showsOfflineDialog() {
    addMediaInfo()
    networkConnectionUtil.setCurrentConnectionStatus(ProdConnectionStatus.CELLULAR)
    launch<AudioFragmentTestActivity>(
      createAudioFragmentTestIntent(internalProfileId)
    ).use {
      testCoroutineDispatchers.runCurrent()

      onView(withId(R.id.play_pause_audio_icon)).check(
        matches(
          withContentDescription(
            context.getString(R.string.audio_play_description)
          )
        )
      )

      onView(withId(R.id.play_pause_audio_icon)).perform(click())
      testCoroutineDispatchers.runCurrent()

      onView(withText(context.getString(R.string.audio_dialog_offline_message)))
        .inRoot(isDialog())
        .check(matches(isDisplayed()))
    }
  }

  @RunOn(TestPlatform.ROBOLECTRIC)
  @Test
  fun testAudioFragment_changeNetworkToCellular_reloadContent_showsWarningAndKeepsPlayingAudio() {
    addMediaInfo()
    networkConnectionUtil.setCurrentConnectionStatus(ProdConnectionStatus.LOCAL)
    launch<AudioFragmentTestActivity>(
      createAudioFragmentTestIntent(internalProfileId)
    ).use { scenario ->
      testCoroutineDispatchers.runCurrent()

      onView(withId(R.id.play_pause_audio_icon)).perform(click())
      testCoroutineDispatchers.runCurrent()
      onView(withId(R.id.play_pause_audio_icon)).check(
        matches(
          withContentDescription(
            context.getString(R.string.audio_pause_description)
          )
        )
      )

      networkConnectionUtil.setCurrentConnectionStatus(ProdConnectionStatus.CELLULAR)
      scenario.onActivity { activity ->
        val audioFragment = activity.supportFragmentManager
          .findFragmentById(R.id.audio_fragment_placeholder) as AudioFragment
        audioFragment.loadMainContentAudio(allowAutoPlay = true)
      }
      testCoroutineDispatchers.runCurrent()

      onView(withText(context.getString(R.string.cellular_data_alert_dialog_description)))
        .inRoot(isDialog())
        .check(matches(isDisplayed()))
      onView(withText(context.getString(R.string.cellular_data_alert_dialog_okay_button)))
        .inRoot(isDialog())
        .check(matches(isDisplayed()))

      scenario.onActivity {
        assertThat(audioPlayerController.getTestMediaPlayer().isPlaying).isTrue()
      }
    }
  }

  @RunOn(TestPlatform.ROBOLECTRIC)
  @Test
  fun testAudioFragment_changeNetworkToNone_reloadMainContent_showsOfflineAndStopsPlayingAudio() {
    addMediaInfo()
    networkConnectionUtil.setCurrentConnectionStatus(ProdConnectionStatus.LOCAL)
    launch<AudioFragmentTestActivity>(
      createAudioFragmentTestIntent(internalProfileId)
    ).use { scenario ->
      testCoroutineDispatchers.runCurrent()

      onView(withId(R.id.play_pause_audio_icon)).perform(click())
      testCoroutineDispatchers.runCurrent()
      onView(withId(R.id.play_pause_audio_icon)).check(
        matches(
          withContentDescription(
            context.getString(R.string.audio_pause_description)
          )
        )
      )

      networkConnectionUtil.setCurrentConnectionStatus(ProdConnectionStatus.NONE)
      scenario.onActivity { activity ->
        val audioFragment = activity.supportFragmentManager
          .findFragmentById(R.id.audio_fragment_placeholder) as AudioFragment
        audioFragment.loadMainContentAudio(allowAutoPlay = true)
      }
      testCoroutineDispatchers.runCurrent()

      onView(withText(context.getString(R.string.audio_dialog_offline_message)))
        .inRoot(isDialog())
        .check(matches(isDisplayed()))
      onView(withText(context.getString(R.string.audio_dialog_offline_positive)))
        .inRoot(isDialog())
        .check(matches(isDisplayed()))
        .perform(click())

      testCoroutineDispatchers.runCurrent()

      onView(withId(R.id.play_pause_audio_icon)).check(
        matches(
          withContentDescription(
            context.getString(R.string.audio_play_description)
          )
        )
      )
    }
  }

  @Test
  fun testAudioFragment_playAudio_repeatSetStateWithSameAudio_keepsAudioPlaying() {
    addMediaInfo()
    networkConnectionUtil.setCurrentConnectionStatus(ProdConnectionStatus.LOCAL)
    launch<AudioFragmentTestActivity>(
      createAudioFragmentTestIntent(internalProfileId)
